--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <div class="brick" style="top: 50px; left: 120px;"></div>
       <div class="brick" style="top: 50px; left: 190px;"></div>
       <div class="brick" style="top: 50px; left: 260px;"></div>
-      <div id="start-message">Press space to start</div>
+      <div id="message">Press space to start</div>
     </div>
     <link rel="stylesheet" href="index.css" />
     <script src="index.js"></script>
