--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <div id="game-area">
       <div id="ball"></div>
       <div id="paddle"></div>
+      <div id="lives">Lives: 3</div>
+      <div id="score">Score: 0</div>
       <div class="brick" style="top: 50px; left: 50px;"></div>
       <div class="brick" style="top: 50px; left: 120px;"></div>
       <div class="brick" style="top: 50px; left: 190px;"></div>
